--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@ background: '/img/bg-index.jpg'
     <div class="col-md-6">
       <h2 class="font-weight-bold mb-4 serif-font">Sản Phẩm:</h2>
       <p class="lead mb-4">BSH Tràng An đem đến các sản phẩm bảo hiểm toàn diện, thiết yếu đáp ứng tối đa nhu cầu của khách hàng.</p>
-      <a href="/bao-hiem-vat-chat-xe-oto/" class="text-white px-5 btn-lg">Bảo hiểm vật chất xe ô tô</a>
-      <a href="/bao-hiem-bat-buoc-tnds-cua-chu-xe-oto/" class="text-white px-5 btn-lg">Bảo hiểm TNDS xe ô tô</a>
+      <a href="/bao-hiem-vat-chat-xe-oto/" class="text-white px-5 btn-lg">Bảo hiểm ô tô</a>
+      <a href="/bao-hiem-bat-buoc-tnds-cua-chu-xe-oto/" class="text-white px-5 btn-lg">Bảo hiểm TNDS ô tô</a>
       <a href="/bao-hiem-bat-buoc-tnds-cua-chu-xe-may/" class="text-white px-5 btn-lg">Bảo hiểm TNDS xe máy</a>
     </div>
   </div>
