--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@ background: '/img/bg-index.jpg'
     <div class="col-md-6">
       <h2 class="font-weight-bold mb-4 serif-font">Sản Phẩm:</h2>
       <div class="col-md-4 mb-5">
-        <a href="/bao-hiem-vat-chat-xe-oto/" class="text-white px-5 btn-lg">Bảo hiểm ô tô</a>
+        <a href="/bao-hiem-vat-chat-xe-oto/" class="text-white font-weight-bold mb-4">Bảo hiểm ô tô</a>
       </div>
       <div class="col-md-4 mb-5">
-        <a href="/bao-hiem-bat-buoc-tnds-cua-chu-xe-oto/" class="text-white px-5 btn-lg">Bảo hiểm TNDS ô tô</a>
+        <a href="/bao-hiem-bat-buoc-tnds-cua-chu-xe-oto/" class="text-white font-weight-bold mb-4">Bảo hiểm TNDS ô tô</a>
       </div>
       <div class="col-md-4 mb-5">
-        <a href="/bao-hiem-bat-buoc-tnds-cua-chu-xe-may/" class="text-white px-5 btn-lg">Bảo hiểm TNDS xe máy</a>
+        <a href="/bao-hiem-bat-buoc-tnds-cua-chu-xe-may/" class="text-white font-weight-bold mb-4">Bảo hiểm TNDS xe máy</a>
       </div>
     </div>
   </div>
