--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@ background: '/img/bg-index.jpg'
     </div>
     <div class="col-md-6">
       <h2 class="font-weight-bold mb-4 serif-font">Sản Phẩm:</h2>
-      <a href="/bao-hiem-vat-chat-xe-oto/" class="text-white font-weight-bold mb-4">Bảo hiểm ô tô</a>
-      <a href="/bao-hiem-bat-buoc-tnds-cua-chu-xe-oto/" class="text-white font-weight-bold mb-4">Bảo hiểm TNDS ô tô</a>
-      <a href="/bao-hiem-bat-buoc-tnds-cua-chu-xe-may/" class="text-white font-weight-bold mb-4">Bảo hiểm TNDS xe máy</a>
+      <a href="/bao-hiem-vat-chat-xe-oto/" class="font-weight-bold mb-4 serif-font">Bảo hiểm ô tô</a>
+      <a href="/bao-hiem-bat-buoc-tnds-cua-chu-xe-oto/" class="font-weight-bold mb-4 serif-font">Bảo hiểm TNDS ô tô</a>
+      <a href="/bao-hiem-bat-buoc-tnds-cua-chu-xe-may/" class="font-weight-bold mb-4 serif-font">Bảo hiểm TNDS xe máy</a>
     </div>
   </div>
 </div>
